# flask-htmx

./: Makefile  README.md  admin.py  app.py  config.py  docker-compose.yml  extensions.py  models.py  pyproject.toml  tailwind.config.js  todo.py
flask_app/: commands.py  extensions.py  main.py  settings.py
flask_app/admin/: views.py
flask_app/frontend/: views.py
flask_app/models/: __init__.py  auth.py  base.py  todo.py
flask_app/models_factories/: todo.py
flask_app/repositories/: base.py  todo.py
flask_app/rest_api/: schemas.py  todo.py  views.py
flask_app/static/src/: htmx.min.js
flask_app/templates/: base.html  index.html
flask_app/todos/: data.py  factories.py  models.py  views.py
migrations/versions/: 20230831_202843_afae098feb50_initial_migration.py  20230831_202940_094c39a1b6d5_security_models.py  20230831_203217_e09874741493_todo_assignee.py  4275fac7bd43_.py  e30e00eed9f8_.py
static/src/: htmx.min.js
templates/: base.html  index.html
