[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Etchegoyen Matthieu <etchegom@gmail.com>"]
readme = "README.md"
packages = [{ include = "flask_demo" }]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
Flask-Admin = "^1.6.1"
Flask-RESTful = "^0.3.10"
Flask-DebugToolbar = "^0.13.1"
Flask-Migrate = "^4.0.4"
flask-assets = "^2.0"
pytailwindcss = "^0.2.0"
flask-htmx = "^0.3.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
environs = "^9.5.0"
flask-shell-ipython = "^0.5.1"
factory-boy = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
skip-magic-trailing-comma = "false"

[tool.isort]
default_section = "FIRSTPARTY"
float_to_top = true
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = [
  "flask",
  "flask_admin",
  "flask_assets",
  "flask_htmx",
  "flask_migrate",
  "flask_sqlalchemy"
]
line_length = 100
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = [".venv"]
use_parentheses = true
